--- a/BlazorApp4/Client/BlazorApp4.Client.csproj
+++ b/BlazorApp4/Client/BlazorApp4.Client.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="3.2.0-rc1.20223.4" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0-rc1.20217.1" />
+
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
